<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (c) 2012 Ronny Röhricht This file is part of Moloko.
      Moloko is free software: you can redistribute it and/or modify it
      under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version. Moloko is distributed in the
      hope that it will be useful, but WITHOUT ANY WARRANTY; without
      even the implied warranty of MERCHANTABILITY or FITNESS FOR A
      PARTICULAR PURPOSE. See the GNU General Public License for more
      details. You should have received a copy of the GNU General Public
      License along with Moloko. If not, see
      <http://www.gnu.org/licenses/>. Contributors: Ronny Röhricht -
      implementation
   -->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:moloko="http://schemas.android.com/apk/res/dev.drsoran.moloko">

   <PreferenceScreen
      android:title="@string/moloko_prefs_rtm_title">
      <intent
          android:action="dev.drsoran.moloko.prefs.rtm.MAIN" />
   </PreferenceScreen>

   <PreferenceScreen
      android:title="@string/moloko_prefs_notification_title">
      <intent
          android:action="dev.drsoran.moloko.prefs.notification.MAIN" />
   </PreferenceScreen>
   
   <PreferenceScreen
      android:title="@string/moloko_prefs_general_title">
      <intent
          android:action="dev.drsoran.moloko.prefs.general.MAIN" />
   </PreferenceScreen>
   
   <PreferenceScreen
      android:title="@string/moloko_prefs_support_dev_title">
      <intent
          android:action="dev.drsoran.moloko.prefs.development.MAIN" />
   </PreferenceScreen>
</PreferenceScreen>
